# MP-Slice

./:   AND_Main.hpp  CMakeLists.txt  README.md  XORNOTAND_Main.hpp  \  ]  config.h  debug_main_template.hpp  myoutput.txt  protocol_executer.hpp  searchMain.cpp  searchMainInPlace.cpp  searchMain_template.cpp  searchMain_template.hpp  searchMain_template_ex.cpp  terminal_output.txt  test.cpp  time_parser.py  time_plotter.py  times.csv  tmain.cpp
Datastructures/: array.hpp  bit_array.hpp  bit_array_vec.hpp  multi_arr.hpp  operations.hpp  ortho.hpp  sarray.hpp  sbit.hpp
Scripts/: config.sh  parse-console-logs.py  run_protocol.sh  run_protocol_old.sh  split-roles-3-compile.sh  split-roles-3-execute.sh  split-roles-3to4-compile.sh  split-roles-3to4-execute.sh  split-roles-3to4.sh  split-roles-4-compile.sh  split-roles-4-execute.sh  split-roles.sh
arch/: AES.h  AES_BS.h  AES_BS_SHORT.h  AVX.h  AVX512.h  BOOL.h  BOOL_class.hpp  CHAR.h  DATATYPE.h  SSE.h  STD.h
circuits/: AND.hpp  AND_COMMUNICATION_ROUNDS.hpp  XORNOTAND.hpp  debug_template.cpp  searchBitSlice.c  searchBitSliceWithComm.cpp  searchBitSliceWithComm_inheritance.cpp  searchBitSliceWithComm_template.cpp  search_ex.cpp  xorshift.c
networking/: buffer_helper.hpp  buffers.h  client.c  client.hpp  clientSSL.hpp  client_macro.hpp  client_n.hpp  packer.hpp  server.c  server.hpp  server_macro.hpp  server_n.hpp  socket.hpp  sockethelper.h
protocols/: CircuitDetails.h  CircuitInfo.hpp  Datatype.hpp  Fantastic_Four_template.hpp  Fantastic_init_template.hpp  Protocol.hpp  Protocol_inheritance.hpp  Protocols.h  (+71 more)
(+15 files in other folders)
